# near-alpha-discovery-indexer

example-indexer/: Cargo.toml  Dockerfile  README.md  diesel.toml
example-indexer/migrations/2022-03-18-000000_initial_scam/: down.sql  up.sql
example-indexer/migrations/2022-10-10-000000_add_receipts/: down.sql  up.sql
example-indexer/src/: main.rs  metrics.rs  retriable.rs  schema.rs
example-indexer/src/models/: enums.rs  events.rs  mod.rs  social.rs
