[package]
name = "example-indexer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.11.0-beta.2"
actix-rt = "=2.2.0"  # remove it once actix is upgraded to 0.11+
actix-web = "=4.0.0-beta.6"
actix-http = "=3.0.0-beta.6"
actix-tls = "=3.0.0-beta.5"
actix_derive = "=0.6.0-beta.1"
bigdecimal = "=0.1.0"
anyhow = "1.0.43"
diesel = { version = "1.4.7", features = ["postgres", "numeric", "serde_json"] }
diesel-derive-enum = { git = "https://github.com/khorolets/diesel-derive-enum.git", branch = "lookup-hack", features = ["postgres"] }
actix-diesel = { git = "https://github.com/frol/actix-diesel", branch="actix-0.11-beta.2" }
openssl-probe = { version = "0.1.2" }
tokio = { version = "1.1", features = ["time", "sync"] }
tokio-stream = { version = "0.1" }
dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

near-indexer = { git = "https://github.com/near/nearcore?tag=1.25.0" }
