[package]
name = "example-indexer"
version = "0.3.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.13.0"
actix-web = "4.3.0"
# actix-http = "=3.0.0-beta.6"
actix-tls = "3.0.0"
actix-rt = "2.2.0"
bigdecimal = "=0.1.0"
anyhow = "1.0.51"
diesel = { version = "1.4.7", features = ["postgres", "numeric", "serde_json"] }
diesel-derive-enum = { git = "https://github.com/khorolets/diesel-derive-enum.git", branch = "lookup-hack", features = ["postgres"] }

openssl-probe = { version = "0.1.2" }
# futures = "0.3.5"
tokio = { version = "1.1", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
paperclip = { version = "=0.7.0", features = ["actix4"] }
paperclip-actix = "=0.5.0"
paperclip-macros = "=0.6.0"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

actix-diesel = { git = "https://github.com/frol/actix-diesel", branch="actix-0.13" }
near-indexer = { git = "https://github.com/near/nearcore", rev = "1.31.0" }
